Add Puppet configuration for the Content Data API
The Content Performance Manager application is being renamed to the
Content Data API to better reflect it's current function.

The Puppet configuration added in this commit relates to the new
configuration for the Content Data API. It's basically a copy of the
Content Performance Manager configuration.

Some things are staying the same for now, like the repository and
database. I think it'll be smoother to change these things once the
app is up and running under the Content Data API name.

Once the migration from the Content Performance Manager to the Content
Data API has been completed, the Content Performance Manager
configuration can be removed.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -22,6 +22,7 @@ node_class: &node_class
       - contacts
       - content-audit-tool
       - content-data-admin
+      - content-data-api
       - content-performance-manager
       - content-publisher
       - content-tagger
@@ -155,6 +156,8 @@ deployable_applications: &deployable_applications
     repository: 'contacts-admin'
   content-audit-tool: {}
   content-data-admin: {}
+  content-data-api:
+    repository: 'content-performance-manager'
   content-performance-manager: {}
   content-publisher: {}
   content-store: {}
