--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -96,6 +96,7 @@ node_class: &node_class
   search:
     apps:
       - rummager
+      - search-api
   whitehall_backend:
     apps:
       - whitehall
