--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -95,6 +95,7 @@ node_class: &node_class
   search:
     apps:
       - rummager
+      - search-api
   whitehall_backend:
     apps:
       - whitehall
