Trello-2031: Cache Router Gor Replay
In oredr to test AWS production we need to temporrarily replay cache
router traffic to the ws production cache router.

The flow of the GOR routing would be as follows for the cache routers:
Carrenza Production -> Carrenza Staging (already in place)
Carrenza Staging -> Integration (already in place but tidying up config
in this PR)
Carrenza Staging -> AWS Production (Being put in place in this PR)
AWS Production -> AWS Staging (Being put in place in this PR)

also removing gor replay from Carrenza Staging to AWS Staging.

@ronocg <conor.glynn@digital.cabinet-office.gov.uk>

--- a/hieradata/class/staging/cache.yaml
+++ b/hieradata/class/staging/cache.yaml
@@ -1,1 +1,6 @@
 nscd::config::dns_cache: 'yes'
+
+router::gor::add_hosts: false
+router::gor::replay_targets:
+  'www-origin.integration.publishing.service.gov.uk': {}
+  'www-origin.production.govuk.digital': {}
