Add rate limiting tokens to assets-carrenza
- We are aiming to re-route asset-manager traffic from AWS frontends to
asset-manager

- For this we re-work the config formerly found on the cache boxes -
including rate-limiting tokens for the fastly facing connections

solo: @schmie

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -818,6 +818,9 @@ govuk::node::s_asset_base::firewall_allow_ip_range: "%{hiera('environment_ip_pre
 
 govuk::node::s_base::log_remote: false
 
+govuk::node::s_backend_lb::app_specific_static_asset_routes:
+  '/asset-manager': "asset-manager"
+  '/government/assets/': "whitehall-frontend"
 govuk::node::s_backend_lb::asset_manager_uploaded_assets_routes:
   - '/government/uploads/'
   - '/media/'
