--- a/development-vm/Procfile
+++ b/development-vm/Procfile
@@ -186,3 +186,5 @@ search-api-bulk-reindex-listener: govuk_setenv search-api ./run_in.sh ../../sear
 # sidekiq-monitoring for search-api uses 3234
 content-data-api:      govuk_setenv content-data-api ./run_in.sh ../../content-data-api bundle exec rails server -p 3235
 # sidekiq-monitoring for content-publisher uses 3236
+# byebug web listener for content-publisher uses 3237
+# byebug sidekiq listener for content-publisher uses 3238
