Switch to a different apt_mirror_hostname
This involves less redirection.

This change is motivated by the alphagov.co.uk domain name not
working, at least temporarily.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -193,7 +193,7 @@ deployable_applications: &deployable_applications
   travel-advice-publisher: {}
   whitehall: {}
 
-apt_mirror_hostname: 'apt.production.alphagov.co.uk'
+apt_mirror_hostname: 'apt.publishing.service.gov.uk'
 
 apt::apt_update_frequency: 'daily'
 apt::purge_preferences_d: true
