--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -60,6 +60,18 @@ govuk_search::gor::replay_target_hosts:
 govuk_search::monitoring::es_port: '80'
 govuk_search::monitoring::es_host: 'elasticsearch5.blue.integration.govuk-internal.digital'
 
+govuk::apps::content_store::plek_service_rummager_uri: 'https://search-api.integration.govuk-internal.digital'
+govuk::apps::collections::override_search_location: 'https://search-api.integration.govuk-internal.digital'
+govuk::apps::content_store::override_search_location: 'https://search-api.integration.govuk-internal.digital'
+govuk::apps::content_tagger::override_search_location: 'https://search-api.integration.govuk-internal.digital'
+govuk::apps::finder_frontend::override_search_location: 'https://search-api.integration.govuk-internal.digital'
+govuk::apps::hmrc_manuals_api::override_search_location: 'https://search-api.integration.govuk-internal.digital'
+govuk::apps::licencefinder::override_search_location: 'https://search-api.integration.govuk-internal.digital'
+govuk::apps::search_admin::override_search_location: 'https://search-api.integration.govuk-internal.digital'
+govuk::apps::whitehall::override_search_location: 'https://search-api.integration.govuk-internal.digital'
+
+govuk::apps::rummager::enable_rummager: false
+
 govuk::deploy::aws_ses_smtp_host: 'email-smtp.eu-west-1.amazonaws.com'
 govuk::deploy::config::errbit_environment_name: "integration-%{hiera('stackname')}-aws"
 govuk::deploy::config::licensify_app_domain: 'integration.publishing.service.gov.uk'
