--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -91,6 +91,9 @@ govuk::apps::travel_advice_publisher::enable_email_alerts: true
 govuk::apps::whitehall::cpu_warning: 400
 govuk::apps::whitehall::cpu_critical: 600
 
+govuk::apps::collections::override_search_location: NULL
+govuk::apps::licencefinder::override_search_location: NULL
+
 govuk_search::gor::replay_target_hosts:
   - 'https://search-api.production.govuk.digital'
 
