--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -158,6 +158,9 @@ govuk_search::gor::port: 3233
 govuk_search::monitoring::es_port: '80'
 govuk_search::monitoring::es_host: 'elasticsearch5.blue.staging.govuk-internal.digital'
 
+govuk::apps::collections::override_search_location: 'https://search-api.production.govuk-internal.digital'
+govuk::apps::licencefinder::override_search_location: 'https://search-api.production.govuk-internal.digital'
+
 govuk_search::gor::replay_target_hosts: []
 
 govuk::apps::rummager::enable_rummager: false
