--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -93,6 +93,7 @@ govuk::apps::whitehall::cpu_critical: 600
 
 govuk::apps::collections::override_search_location: NULL
 govuk::apps::licencefinder::override_search_location: NULL
+govuk::apps::finder_frontend::override_search_location: NULL
 
 govuk_search::gor::replay_target_hosts:
   - 'https://search-api.production.govuk.digital'
