--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -160,6 +160,7 @@ govuk_search::monitoring::es_host: 'elasticsearch5.blue.production.govuk-interna
 
 govuk::apps::collections::override_search_location: 'https://search-api.production.govuk-internal.digital'
 govuk::apps::licencefinder::override_search_location: 'https://search-api.production.govuk-internal.digital'
+govuk::apps::finder_frontend::override_search_location: 'https://search-api.production.govuk-internal.digital'
 
 govuk_search::gor::replay_target_hosts: []
 
