--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -96,6 +96,8 @@ govuk::apps::content_tagger::override_search_location: 'https://search-api.produ
 govuk::apps::hmrc_manuals_api::override_search_location: 'https://search-api.production.govuk.digital'
 govuk::apps::licencefinder::override_search_location: NULL
 govuk::apps::finder_frontend::override_search_location: NULL
+govuk::apps::search_admin::override_search_location: 'https://search-api.production.govuk.digital'
+govuk::apps::whitehall::override_search_location: 'https://search-api.production.govuk.digital'
 
 govuk_search::gor::replay_target_hosts:
   - 'https://search-api.production.govuk.digital'
