--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -163,6 +163,8 @@ govuk::apps::content_tagger::override_search_location: NULL
 govuk::apps::hmrc_manuals_api::override_search_location: NULL
 govuk::apps::licencefinder::override_search_location: 'https://search-api.production.govuk-internal.digital'
 govuk::apps::finder_frontend::override_search_location: 'https://search-api.production.govuk-internal.digital'
+govuk::apps::search_admin::override_search_location: NULL
+govuk::apps::whitehall::override_search_location: NULL
 
 govuk_search::gor::replay_target_hosts: []
 
