--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -95,6 +95,7 @@ govuk_search::gor::replay_target_hosts:
   - 'https://search-api.production.govuk.digital'
 
 govuk::apps::rummager::enable_rummager: true
+govuk::apps::search_api::rummager_enable: true
 
 govuk::deploy::actionmailer_enable_delivery: true
 
