--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -71,6 +71,7 @@ govuk::apps::search_admin::override_search_location: 'https://search-api.integra
 govuk::apps::whitehall::override_search_location: 'https://search-api.integration.govuk-internal.digital'
 
 govuk::apps::rummager::enable_rummager: false
+govuk::apps::search_api::rummager_enable: false
 
 govuk::deploy::aws_ses_smtp_host: 'email-smtp.eu-west-1.amazonaws.com'
 govuk::deploy::config::errbit_environment_name: "integration-%{hiera('stackname')}-aws"
