configure puppet to allow Carrenza Trusty puppetmaster

--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -479,12 +479,13 @@ hosts::production::management::hosts:
     legacy_aliases:
       - "deploy.%{hiera('app_domain')}"
   puppetmaster-1:
-    ip: '10.2.0.5'
+    ip: '10.2.0.6'
     legacy_aliases:
       - 'puppet'
     service_aliases:
       - 'puppet'
       - 'puppetdb'
+      - 'puppetmaster-2'
   monitoring-1:
     ip: '10.2.0.20'
     legacy_aliases:
